--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
   </style>
 </head>
 <body>
-  <h1>❤ Te amo mucho mi amor ❤</h1>
-  <h1>Eres lo más lindo que he tenido en mi vida 💕</h1>
+  <h1>❤ Te amo mucho mi Amor ❤</h1>
+  <h1>TE AMOOOOOOOOOOOOOOOOOOOOOOOO 💕</h1>
   <h1>Te amo con todo mi corazón 💖</h1>
-  <h1>Y estaremos juntos para siempre 💍</h1>
+  <h1>💖 Me haces demaciado feliz mi vida hermosa, quiero vivir muchos mas momentos con usted 💖</h1>
 
   <div class="gallery">
     <img src="Imagen de WhatsApp 2025-09-21 a las 00.20.47_80f4f75e.jpg" alt="Foto 1">
